terraform/security-group.tf
resource "aws_security_group" "flightwatch_security_group" {
  name        = "flightwatch-security-group"
  description = "Security group for FlightWatch"
  vpc_id      = aws_vpc.flightwatch_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "flightwatch-security-group"
  }
}
